--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -417,6 +417,7 @@
                 </div>
             </div>
         </main>
+        <!-- footer -->
         <footer>
             <div class="footer-item">
                 <div class="footer-item-titre">
