reglages de la mise en page de la partie activités

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -350,8 +350,8 @@
                 <div class="card-activites-all-item">
                     <!-- 1er card activités -->
                     <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
+                    <div class="card-activites-seul">
+                        <div class="card-activites-seul-image">
                             <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/vieux-port.jpg" alt="image du vieux port">
                         </div>
                         <div class="card-activites-item-titre">
@@ -359,32 +359,35 @@
                         </div>
                     </div>
                     </a>
-                    <!-- 2eme card activités -->
-                    <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
-                            <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/pomegues.jpg" alt="image du vieux port">
-                        </div>
-                        <div class="card-activites-item-titre">
-                            <h2 class="card-activites-item-h2"> Fort de Pomègues</h2>
-                        </div>
+                    <!--card activites 2 et 3 -->
+                    <div class="card-activites-deux-trois">
+                        <!-- 2eme card activités -->
+                        <a href="#">
+                            <div class="card-activites-deux">
+                                <div class="card-activites-deux-image">
+                                    <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/pomegues.jpg" alt="image du vieux port">
+                                </div>
+                                <div class="card-activites-item-titre">
+                                    <h2 class="card-activites-item-h2"> Fort de Pomègues</h2>
+                                </div>
+                            </div>
+                        </a>
+                        <!-- 3eme card activités -->
+                        <a href="#">
+                            <div class="card-activites-trois">
+                                <div class="card-activites-trois-image">
+                                    <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/ile-frioul.jpg" alt="image du vieux port">
+                                </div>
+                                <div class="card-activites-item-titre">
+                                    <h2 class="card-activites-item-h2"> Îles du Frioul</h2>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                    </a>
-                    <!-- 3eme card activités -->
-                    <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
-                            <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/ile-frioul.jpg" alt="image du vieux port">
-                        </div>
-                        <div class="card-activites-item-titre">
-                            <h2 class="card-activites-item-h2"> Îles du Frioul</h2>
-                        </div>
-                    </div>
-                    </a>
                     <!-- 4eme card activités -->
                     <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
+                    <div class="card-activites-seul">
+                        <div class="card-activites-seul-image">
                             <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/calanques.jpg" alt="image du vieux port">
                         </div>
                         <div class="card-activites-item-titre">
@@ -392,28 +395,31 @@
                         </div>
                     </div>
                     </a>
-                    <!-- 5eme card activités -->
-                    <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
-                            <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/notre-dame.jpg" alt="image du vieux port">
-                        </div>
-                        <div class="card-activites-item-titre">
-                            <h2 class="card-activites-item-h2"> Notre-Dame-de-la-Garde</h2>
-                        </div>
+                    <!-- card activites 5 et 6 -->
+                    <div class="card-activites-cinq-six">
+                        <!-- 5eme card activités -->
+                        <a href="#">
+                            <div class="card-activites-cinq">
+                                <div class="card-activites-image">
+                                    <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/notre-dame.jpg" alt="image du vieux port">
+                                </div>
+                                <div class="card-activites-item-titre">
+                                    <h2 class="card-activites-item-h2"> Notre-Dame-de-la-Garde</h2>
+                                </div>
+                            </div>
+                        </a>
+                        <!-- 6eme card activités -->
+                        <a href="#">
+                            <div class="card-activites-six">
+                                <div class="card-activites-image">
+                                    <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/longchamp.jpg" alt="image du vieux port">
+                                </div>
+                                <div class="card-activites-item-titre">
+                                    <h2 class="card-activites-item-h2"> Parc Longchamp</h2>
+                                </div>
+                            </div>
+                        </a>
                     </div>
-                    </a>
-                    <!-- 6eme card activités -->
-                    <a href="#">
-                    <div class="card-activites-item">
-                        <div class="card-activites-image">
-                            <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/longchamp.jpg" alt="image du vieux port">
-                        </div>
-                        <div class="card-activites-item-titre">
-                            <h2 class="card-activites-item-h2"> Parc Longchamp</h2>
-                        </div>
-                    </div>
-                    </a>
                 </div>
             </div>
         </main>
