derniers reglages de la mise en page de la partie activités

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -400,7 +400,7 @@
                         <!-- 5eme card activités -->
                         <a href="#">
                             <div class="card-activites-cinq">
-                                <div class="card-activites-image">
+                                <div class="card-activites-cinq-image">
                                     <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/notre-dame.jpg" alt="image du vieux port">
                                 </div>
                                 <div class="card-activites-item-titre">
@@ -411,7 +411,7 @@
                         <!-- 6eme card activités -->
                         <a href="#">
                             <div class="card-activites-six">
-                                <div class="card-activites-image">
+                                <div class="card-activites-six-image">
                                     <img src="/P2_Booki_Nowfeel_SAFI/assets/images/activites/4_small/longchamp.jpg" alt="image du vieux port">
                                 </div>
                                 <div class="card-activites-item-titre">
