mise en page du footer avec les liens

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -27,8 +27,8 @@
                     <img  src="/P2_Booki_Nowfeel_SAFI/assets/images/logo/Booki@3x.png" alt="logo du site Booki">
                 </div>  
                 <ul class="navigation">
-                    <li> <a href="#hebergements"> Hébergements </a></li>
-                    <li> <a href="#activites">Activités </a> </li>
+                    <li class="header-li"> <a href="#hebergements"> Hébergements </a></li>
+                    <li class="header-li"> <a href="#activites">Activités </a> </li>
                 </ul> 
             </nav>
         </header>
@@ -437,9 +437,11 @@
                     <h2 class="footer-item-h2"> A propos </h2>
                 </div>
                 <div class="footer-item-lien">
-                    <p class="footer-item-p"> Fonctionnement du site</p>
-                    <p class="footer-item-p"> Conditions générales de vente </p>
-                    <p class="footer-item-p"> Données et confidentialité </p>
+                    <ol class="footer-item-ol">
+                        <li class="footer-li"> Fonctionnement du site </li>
+                        <li class="footer-li"> Conditions générales de vente </li>
+                        <li class="footer-li"> Données et confidentialité </li>
+                    </ol>
                 </div>
             </div>
             <div class="footer-item">
@@ -447,8 +449,10 @@
                     <h2 class="footer-item-h2"> Nos hébergements</h2>
                 </div>
                 <div class="footer-item-lien">
-                    <p class="footer-item-p"> Charte qualité </p>
-                    <p class="footer-item-p"> Soumettre votre hôtel </p>
+                    <ol class="footer-item-ol">
+                        <li class="footer-li"> Charte qualité </li>
+                        <li class="footer-li"> Soumettre votre hôtel </li>
+                    </ol>
                 </div>
             </div>
             <div class="footer-item">
@@ -456,8 +460,10 @@
                     <h2 class="footer-item-h2"> Assistance </h2>
                 </div>
                 <div class="footer-item-lien">
-                    <p class="footer-item-p"> Centre d'aide </p>
-                    <p class="footer-item-p"> Nous contacter </p>
+                    <ol class="footer-item-ol">
+                        <li class="footer-li"> Centre d'aide</li>
+                        <li class="footer-li"> Nous contacter</li> 
+                    </ol>
                 </div>
         </footer>
     </body>
