ajout de balise a footer

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -438,9 +438,9 @@
                 </div>
                 <div class="footer-item-lien">
                     <ol class="footer-item-ol">
-                        <li class="footer-li"> Fonctionnement du site </li>
-                        <li class="footer-li"> Conditions générales de vente </li>
-                        <li class="footer-li"> Données et confidentialité </li>
+                        <li class="footer-li"><a href="#"> Fonctionnement du site </a></li>
+                        <li class="footer-li"><a href="#"> Conditions générales de vente </a> </li>
+                        <li class="footer-li"><a href="#"> Données et confidentialité </a> </li>
                     </ol>
                 </div>
             </div>
@@ -450,8 +450,8 @@
                 </div>
                 <div class="footer-item-lien">
                     <ol class="footer-item-ol">
-                        <li class="footer-li"> Charte qualité </li>
-                        <li class="footer-li"> Soumettre votre hôtel </li>
+                        <li class="footer-li"> <a href="#">Charte qualité </a> </li>
+                        <li class="footer-li"><a href="#">Soumettre votre hôtel </a></li>
                     </ol>
                 </div>
             </div>
@@ -461,8 +461,8 @@
                 </div>
                 <div class="footer-item-lien">
                     <ol class="footer-item-ol">
-                        <li class="footer-li"> Centre d'aide</li>
-                        <li class="footer-li"> Nous contacter</li> 
+                        <li class="footer-li"> <a href="#">Centre d'aide</a></li>
+                        <li class="footer-li"><a href=#>Nous contacter</a></li> 
                     </ol>
                 </div>
         </footer>
