dernieres finitions desktop et tablet

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -343,6 +343,7 @@
                                 </a>
                             </div>
                         </div>
+                        <!-- afficher plus-->
                         <div class="afficher-plus">
                             <h2 class="afficher-plus-h2"> Afficher plus </h2>
                         </div>
