derniers reglages partie tablette

--- a/P2_Booki_Nowfeel_SAFI/index.html
+++ b/P2_Booki_Nowfeel_SAFI/index.html
@@ -40,8 +40,8 @@
                     <i class="fas fa-map-marker-alt"></i>
                 </label>
                 <input class="recherche" type="search" name="champ de recherche" placeholder="">
-                <input class="bouton" type="submit" value="Rechercher">
-                <button class="loupe" type="submit">
+                <input class="bouton" type="submit" value="Rechercher" disabled>
+                <button class="loupe" type="submit" disabled>
                     <i class="fas fa-search"></i>    
                 </button>
             </form>
